# michael-doors-whatsapp-bot

./: .env.example  .gitignore  BOT_AUDIT.md  Dockerfile  README.md  last_seen.json  migrate_to_supabase.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_full_test.py  test_bot.py  test_scenarios.py  test_server.py  test_topic_detection.py
.github/workflows/: keep-alive.yml  reload-after-deploy.yml
src/: server.js
src/data/: faqBank.json
src/michael_doors_bot/: config.py  main.py
src/michael_doors_bot/engine/: messages.py  simple_router.py
src/michael_doors_bot/providers/: google_sheets.py  greenapi.py  supabase_store.py
src/prompts/: systemPrompt.txt
src/routes/: greenWebhook.js
src/rules/: businessRules.js
src/services/: claudeService.js  greenApiService.js  leadsService.js  scenarioService.js
src/utils/: logger.js
